# simplemotion-rs

./: .gitignore  .gitmodules  Cargo.toml  NOTES.md  README.md  axis_mm.ini  build.sh  position_mm.txt
.circleci/: config.yml
simplemotion/: CHANGELOG.md  Cargo.toml  README.md
simplemotion-sys/: CHANGELOG.md  Cargo.toml  README.md  build.rs  wrapper.h
simplemotion-sys/examples/: control-mode-linuxcnc.hal  control-mode-linuxcnc.ini  control-mode-linuxcnc.rs  control-mode.rs  read-errors.rs  setpoint.rs
simplemotion-sys/src/: lib.rs
simplemotion/examples/: change.ngc  linuxcnc-panel.hal  linuxcnc-panel.xml  linuxcnc.hal  linuxcnc.ini  linuxcnc.rs
simplemotion/src/: faults.rs  lib.rs  moving_average.rs  parameters.rs  status.rs  statuscode.rs
