[package]
name = "simplemotion-sys"
version = "0.1.0"
authors = ["James Waples <james@wapl.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.54.1"
cc = "1.0.59"

[dev-dependencies]
thiserror = "1.0.20"

