[package]
name = "simplemotion-sys"
description = "Generated SimpleMotionV2 bindings"
version = "0.1.0"
authors = ["James Waples <james@wapl.es>"]
edition = "2021"
categories = [ "external-ffi-bindings", "science::robotics" ]
readme = "./README.md"
license = "MIT OR Apache-2.0"
keywords = [ "cnc", "simplemotion", "bindgen", "ffi", "argon" ]
include = [
    "**/*.rs",
    "Cargo.toml",
    "wrapper.h",
    "SimpleMotionV2",
    "README.md",
]

[badges]
circle-ci = { repository = "jamwaffles/simplemotion-rs", branch = "master" }

[dependencies]

[build-dependencies]
bindgen = "0.60.1"
cc = "1.0.59"

[dev-dependencies]
thiserror = "1.0.20"
pretty_env_logger = "0.4.0"
log = "0.4.11"

[dev-dependencies.linuxcnc-hal]
version = "0.2.0"
# path = "../../linuxcnc-hal-rs/linuxcnc-hal"
