[package]
name = "simplemotion"
description = "Generated SimpleMotionV2 bindings"
version = "0.1.0"
authors = ["James Waples <james@wapl.es>"]
edition = "2018"
categories = [ "science::robotics" ]
readme = "./README.md"
license = "MIT OR Apache-2.0"
keywords = [ "cnc", "simplemotion", "granite", "argon" ]

[badges]
circle-ci = { repository = "jamwaffles/simplemotion-rs", branch = "master" }

[dependencies]
thiserror = "1.0.21"
log = "0.4.11"
simplemotion-sys = { path = "../simplemotion-sys" }

[dev-dependencies]
linuxcnc-hal = { path = "../../linuxcnc-hal-rs/linuxcnc-hal" }
pretty_env_logger = "0.4.0"
